refactor AriClient to interface, HttpAriClient as implementation